Fixed collected cookies view info bar visibility

Need to recalculate the dialog size once the InfobarView is made visible.

BUG=665053

Review-Url: https://codereview.chromium.org/2503643002
Cr-Commit-Position: refs/heads/master@{#435249}

Former-commit-id: 11f088e941f3264c42b2cb3265c2cc6d48397712